fixing spacing

--- a/themes/brook/static/css/main.css
+++ b/themes/brook/static/css/main.css
@@ -259,7 +259,7 @@ time {
 }
 
 article {
-  margin: 1.6rem 0;
+  margin: 1.6rem 1rem;
 }
 
 article b {
